[gd_scene load_steps=23 format=3 uid="uid://dm0vfm6e713yh"]

[ext_resource type="PackedScene" uid="uid://nr6v23qqk8cq" path="res://player.tscn" id="1_hx60n"]
[ext_resource type="Script" path="res://main.gd" id="1_vakhf"]
[ext_resource type="Shader" path="res://water.gdshader" id="2_efo20"]
[ext_resource type="Shader" path="res://shaders/damage.gdshader" id="2_o2ish"]
[ext_resource type="Texture2D" uid="uid://dlywgj4my3hsj" path="res://images/lense_drops.jpeg" id="3_1dtfm"]
[ext_resource type="AudioStream" uid="uid://caeipbtmk04k2" path="res://sounds/river.mp3" id="7_kc7ja"]
[ext_resource type="PackedScene" uid="uid://b0b7qx6t0fnav" path="res://elements/muelle001.tscn" id="8_r312o"]
[ext_resource type="AudioStream" uid="uid://cwpo3iwwniwbe" path="res://sounds/kayak.mp3" id="8_tlc1p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b77lc"]
shader = ExtResource("2_o2ish")
shader_parameter/damage_level = 0.0
shader_parameter/paddle_left = 0.0
shader_parameter/paddle_right = null

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f0w1c"]
sky_top_color = Color(0.278431, 0.278431, 0.278431, 1)
sky_horizon_color = Color(0.0509804, 0.0509804, 0.0509804, 1)
sky_curve = 0.130583
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.0313726, 0.0313726, 0.0313726, 1)
ground_curve = 0.0373214
sun_angle_max = 0.0

[sub_resource type="Sky" id="Sky_chauj"]
sky_material = SubResource("ProceduralSkyMaterial_f0w1c")
radiance_size = 0

[sub_resource type="Environment" id="Environment_cyhdn"]
background_mode = 2
sky = SubResource("Sky_chauj")
ambient_light_source = 3
ambient_light_sky_contribution = 0.21
reflected_light_source = 2
tonemap_mode = 2
fog_light_color = Color(0.188235, 0.188235, 0.188235, 1)
fog_density = 0.0429

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m7qls"]
emission_shape = 3
emission_box_extents = Vector3(10, 1, 50)
gravity = Vector3(0, -2, 0)
scale_min = 0.1
turbulence_enabled = true

[sub_resource type="QuadMesh" id="QuadMesh_hxajk"]
size = Vector2(0.1, 0.1)

[sub_resource type="PlaneMesh" id="PlaneMesh_xoete"]
size = Vector2(100, 200)

[sub_resource type="Gradient" id="Gradient_nh55g"]
offsets = PackedFloat32Array(0.745455, 0.825455)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ygx8g"]
noise_type = 3
frequency = 0.02
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_egqph"]
seamless = true
color_ramp = SubResource("Gradient_nh55g")
noise = SubResource("FastNoiseLite_ygx8g")

[sub_resource type="Gradient" id="Gradient_ptu5k"]
offsets = PackedFloat32Array(0.730909, 0.814545)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_aou4y"]
noise_type = 3
seed = 1
frequency = 0.02
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_37nns"]
seamless = true
color_ramp = SubResource("Gradient_ptu5k")
noise = SubResource("FastNoiseLite_aou4y")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ggbls"]
render_priority = 0
shader = ExtResource("2_efo20")
shader_parameter/albedo = Color(0.921569, 0.921569, 0.921569, 1)
shader_parameter/texture_1 = SubResource("NoiseTexture2D_egqph")
shader_parameter/texture_2 = SubResource("NoiseTexture2D_37nns")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_vakhf")

[node name="DamageTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_b77lc")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1dtfm")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "00:10"
horizontal_alignment = 1

[node name="XPLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 41.0
offset_bottom = 26.0
text = "100"

[node name="DamageLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_bottom = 26.0
grow_horizontal = 0
text = "0.0"
horizontal_alignment = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
visible = false
light_color = Color(0.839216, 0.839216, 0.839216, 1)
light_energy = 0.01

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cyhdn")

[node name="Player" parent="." instance=ExtResource("1_hx60n")]

[node name="GPUParticles3D" type="GPUParticles3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.24008, -0.403648)
amount = 100
lifetime = 5.0
fixed_fps = 15
visibility_aabb = AABB(-4, -1.1109, -4, 8, 2.2218, 8)
process_material = SubResource("ParticleProcessMaterial_m7qls")
draw_pass_1 = SubResource("QuadMesh_hxajk")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(0.999227, 0.0147298, -0.0364483, 0.0196715, 0.61538, 0.787985, 0.0340364, -0.788093, 0.614615, -0.05192, 13.0947, 10.3383)

[node name="OmniLight3D2" type="OmniLight3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.55263, -1.46322)
light_color = Color(0.768627, 0.768627, 0.768627, 1)
light_energy = 10.033
omni_range = 7.786
omni_attenuation = 1.41421

[node name="OmniLight3D3" type="OmniLight3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.5393, -1.46322)
light_energy = 2.704
omni_range = 34.089
omni_attenuation = 1.10957

[node name="SpotLight3D" type="SpotLight3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.991642, 0.129021, 0, -0.129021, 0.991642, 0, 0.746385, -0.617026)
spot_range = 10.0

[node name="Water" type="CSGMesh3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -87.1605)
mesh = SubResource("PlaneMesh_xoete")
material = SubResource("ShaderMaterial_ggbls")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kc7ja")
autoplay = true
bus = &"River"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_tlc1p")
volume_db = -9.768
autoplay = true
bus = &"River"

[node name="Enemies" type="Node3D" parent="."]

[node name="Items" type="Node3D" parent="."]

[node name="Level" type="Node3D" parent="."]

[node name="muelle001" parent="." instance=ExtResource("8_r312o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -18)
